--- a/UI-Kit/style.css
+++ b/UI-Kit/style.css
@@ -232,7 +232,7 @@ p {
 }
 
 .button__ghost--left-icon:hover {
-    border: none;
+    border-color: transparent;
 }
 
 .button__ghost--left-icon .vector-left {
@@ -250,7 +250,7 @@ p {
 
 .button__ghost--right-icon:hover,
 .button__ghost--right-icon:focus {
-    border: none;
+    border-color: transparent;
 }
 
 
@@ -271,8 +271,10 @@ p {
     box-sizing: border-box;
 }
 
-.input:focus {
+.input:focus,
+.input:hover {
     outline: none;
+    border: 1px solid #0052FF;
 }
 
 .btn-icon {
@@ -315,8 +317,8 @@ p {
     background-repeat: no-repeat;
 }
 
-.right-icon {
-    padding-left: 52px;
+.left-icon {
+    padding-right: 52px;
 }
 
 
@@ -348,6 +350,7 @@ p {
     letter-spacing: 0px;
     text-align: left;
     padding-left: 23px;
+    padding-right: 50px;
 }
 
 .drop-button:focus {
@@ -417,6 +420,7 @@ p {
     width: 100%;
     height: 100%;
     z-index: 2;
+    cursor: pointer;
 }
 
 .checkbox span {
@@ -452,6 +456,7 @@ p {
     width: 100%;
     height: 100%;
     z-index: 2;
+    cursor: pointer;
 }
 
 .radio input:checked+span {
@@ -483,6 +488,7 @@ p {
     height: 100%;
     z-index: 2;
     position: absolute;
+    cursor: pointer;
 }
 
 .switch span {
